# hackage-search

./: .gitignore  README.md  cabal.project  default.nix  deploy.sh  flake.nix  package.nix  service.nix
.buildkite/: pipeline.yml
backend/: Config.hs  Download.hs  Main.hs  Search.hs  design.md  hackage-search.cabal
frontend/: Build.hs  index.html  main.scss  main.ts  tsconfig.json
nix/: nixpkgs-pin.nix
