cabal-version: 2.1
name: hackage-search
version: 0
author: Vladislav Zavialov
category: Web
build-type: Simple

executable hackage-search
  main-is:
    Main.hs
  other-modules:
    Config
  build-depends:
    base >= 4.13 && <5,
    text,
    servant,
    servant-server,
    warp,
    vector,
    optparse-applicative,
    process
  default-language:
    Haskell2010
  default-extensions:
    TypeFamilies
    TypeOperators
    PolyKinds
    DataKinds
    NamedFieldPuns
    ApplicativeDo
    MultiParamTypeClasses
  ghc-options:
    -Wall
    -threaded
    -O2
  ghc-prof-options:
    -fprof-auto
    -rtsopts
    -auto-all
    -caf-all
